--- a/dreamcatcher/Makefile
+++ b/dreamcatcher/Makefile
@@ -24,10 +24,13 @@ define Build/Prepare
 	$(CP) ./src/* $(PKG_BUILD_DIR)
 endef
 
-LDFLAGS += -Wl,-rpath-link=$(STAGING_DIR)/usr/lib -lnetfilter_queue -luci -lpthread
+LDFLAGS += -Wl,-rpath-link=$(STAGING_DIR)/usr/lib -lnetfilter_queue -luci
 
 define Build/Compile
-	$(TARGET_CC) $(TARGET_CFLAGS) $(LDFLAGS) -I$(PKG_BUILD_DIR) -o $(PKG_BUILD_DIR)/dreamcatcher $(PKG_BUILD_DIR)/main.c $(PKG_BUILD_DIR)/config.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(LDFLAGS) -I$(PKG_BUILD_DIR) -o $(PKG_BUILD_DIR)/dreamcatcher \
+		$(PKG_BUILD_DIR)/main.c \
+		$(PKG_BUILD_DIR)/config.c \
+		$(PKG_BUILD_DIR)/logger.c
 endef
 
 define Package/dreamcatcher/install
