working on updating firewall3, updated build system - now openwrt build config should work better when main project updates under us

--- a/dreamcatcher/Makefile
+++ b/dreamcatcher/Makefile
@@ -12,7 +12,7 @@ define Package/dreamcatcher
 	CATEGORY:=Network
 	SUBMENU:=Firewall
 	TITLE:=Dreamcatcher intra-network filter
-	DEPENDS:=+wpad +libnetfilter-queue +iptables-mod-nfqueue +kmod-ipt-nfqueue +kmod-nfnetlink +kmod-nfnetlink-queue +libuci +freeradius2 +freeradius2-common +freeradius2-mod-chap +freeradius2-mod-detail +freeradius2-mod-eap +freeradius2-mod-eap-mschapv2 +freeradius2-mod-eap-peap +freeradius2-mod-eap-tls +freeradius2-mod-eap-ttls +freeradius2-mod-exec +freeradius2-mod-files +freeradius2-mod-mschap +freeradius2-mod-pap +freeradius2-mod-passwd +freeradius2-mod-preprocess +freeradius2-mod-radutmp +freeradius2-utils
+	DEPENDS:=+wpad +libnetfilter-queue +iptables-mod-nfqueue +kmod-ipt-nfqueue +kmod-nfnetlink +kmod-nfnetlink-queue +libuci +freeradius2 +FREERADIUS_OPENSSL +freeradius2-common +freeradius2-mod-chap +freeradius2-mod-detail +freeradius2-mod-eap +freeradius2-mod-eap-mschapv2 +freeradius2-mod-eap-peap +freeradius2-mod-eap-tls +freeradius2-mod-eap-ttls +freeradius2-mod-exec +freeradius2-mod-files +freeradius2-mod-mschap +freeradius2-mod-pap +freeradius2-mod-passwd +freeradius2-mod-preprocess +freeradius2-mod-radutmp +freeradius2-utils
 endef
 
 define Package/bridge/description
