fixing dreamcatcher Makefile from mistakenly committed warden version

--- a/dreamcatcher/Makefile
+++ b/dreamcatcher/Makefile
@@ -32,7 +32,9 @@ LDFLAGS += -Wl,-rpath-link=$(STAGING_DIR)/usr/lib -lnetfilter_queue -luci -lnfne
 define Build/Compile
 	$(TARGET_CC) $(TARGET_CFLAGS) $(LDFLAGS) -I$(PKG_BUILD_DIR) -o $(PKG_BUILD_DIR)/dreamcatcher \
 		$(PKG_BUILD_DIR)/main.c \
-		$(PKG_BUILD_DIR)/logger.c 
+		$(PKG_BUILD_DIR)/config.c \
+		$(PKG_BUILD_DIR)/logger.c \
+		$(PKG_BUILD_DIR)/protocols.c
 endef
 
 define Package/dreamcatcher/install
