moved CA dir to freeradius2 dir so it doesn't have to be recopied each flash and radiusd will load right away

--- a/freeradius2/eap.conf
+++ b/freeradius2/eap.conf
@@ -152,7 +152,7 @@
 			#
 			#  These is used to simplify later configurations.
 			#
-			confdir = /root/CA
+			confdir = /etc/freeradius2/CA
 			certdir = ${confdir}/certs
 			cadir = ${confdir}/certs
 
