checkpoint should now auto-start

--- a/dreamcatcher/Makefile
+++ b/dreamcatcher/Makefile
@@ -40,8 +40,11 @@ endef
 define Package/dreamcatcher/install
 	$(INSTALL_DIR) $(1)/usr/sbin
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/$(PKG_NAME) $(1)/usr/sbin/
+	$(INSTALL_DIR) $(1)/usr/sbin
+	$(INSTALL_BIN) ./checkpoint/checkpoint.sh $(1)/bin/checkpoint
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/dreamcatcher.init $(1)/etc/init.d/dreamcatcher
+	$(INSTALL_BIN) ./files/checkpoint.init $(1)/etc/init.d/checkpoint
 endef
 
 $(eval $(call BuildPackage,dreamcatcher))
